<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <View
            android:id="@+id/view_bottom1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_welcome"
            app:layout_constraintBottom_toTopOf="@+id/view_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/center"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view_bottom"
            android:layout_width="0dp"
            android:layout_height="107dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="33dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:onClick="onClick"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/center"
            app:layout_constraintStart_toEndOf="@+id/StartOf1"
            app:layout_constraintTop_toBottomOf="@+id/view_bottom1"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/round_bottom_register"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom"
            app:layout_constraintEnd_toStartOf="@+id/EndOf1"
            app:layout_constraintStart_toEndOf="@+id/center"
            app:layout_constraintTop_toBottomOf="@+id/view_bottom1" />

        <View
            android:id="@+id/center"
            android:layout_width="9dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/StartOf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/EndOf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/text_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_photo"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom1"
            app:layout_constraintEnd_toEndOf="@+id/view_bottom1"
            app:layout_constraintStart_toStartOf="@+id/view_bottom1"
            app:layout_constraintTop_toTopOf="@+id/view_bottom1" />

        <ImageView
            android:id="@+id/square"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom1"
            app:layout_constraintEnd_toStartOf="@+id/text_photo"
            app:layout_constraintTop_toTopOf="@+id/view_bottom1"
            app:srcCompat="@drawable/union_1" />

        <ImageView
            android:id="@+id/square1"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom1"
            app:layout_constraintEnd_toStartOf="@+id/text_photo"
            app:layout_constraintTop_toTopOf="@+id/view_bottom1"
            app:srcCompat="@drawable/union_2" />

        <ImageView
            android:id="@+id/user_face"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom1"
            app:layout_constraintStart_toEndOf="@+id/StartOf1"
            app:srcCompat="@drawable/user_face" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="33dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bottom1"
            app:layout_constraintStart_toEndOf="@+id/user_face" />

        <TextView
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/user_name2"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/user_face"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>